--- a/package.json
+++ b/package.json
@@ -19,17 +19,21 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
-    "@types/node": "^18.17.15",
+    "@types/node": "^18.17.17",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "msw": "^1.3.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "typescript": "~5.1.6",
     "vite": "^4.4.9",
     "vue-tsc": "^1.8.11"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
